# yeelight-rs

./: Cargo.toml
src/: cli.rs  lib.rs  main.rs  parser.rs  todo
src/light/: mod.rs
tests/: integration_test.rs  main.rs
