[package]
name = "yeelight-rs"
version = "0.1.0"
authors = ["LevitatingBusinessMan <public@reinfernhout.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="yeelight-cli"
path="src/cli.rs"

[dependencies]
regex = "1.1.9"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
anyhow = "1.0.38"
thiserror = "1.0.24"
